--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -2,6 +2,8 @@
 $cyan-10: #E0F5FD;
 $cyan-20: #00BAF2;
 $cyan-30: #2F82ED;
+$cyan-40: #002970;
+$cyan-50: #1E2B5B; 
 
 $dark-5: #E0E0E0;
 $dark-10: #707070;
