--- a/src/styles/layout/_heroOption.scss
+++ b/src/styles/layout/_heroOption.scss
@@ -3,6 +3,7 @@
 
 #mainCard {
     @include spacing(margin, 2rem, tb);
+    box-shadow: 0 10px 10px 2px rgba(0, 0, 0, 0.1);
     background-color: white;
     border-radius: 1rem;
     padding: 1.4rem;
