--- a/src/styles/layout/_cards.scss
+++ b/src/styles/layout/_cards.scss
@@ -142,9 +142,10 @@
     #miniBtn {
         border: 1px solid $dark-5;
         border-radius: 10rem;
+        text-align: center;
         padding: 0.5rem 1.2rem 0.5rem 1.2rem;
+        position: relative;
     }
-
 }
 
 #thirdBtnPart #imgBtn  {
